Fix  font size for about title on mobile

--- a/src/css/about.css
+++ b/src/css/about.css
@@ -55,7 +55,7 @@
 
 .about-text {
     font-weight: 400;
-    font-size: 18px;
+    font-size: 16px;
     line-height: 1.6;
     text-align: center;
     margin: 0 auto;
